experiments multiple init

--- a/config.yaml
+++ b/config.yaml
@@ -3,8 +3,8 @@ optimize:
   optimizer: Adam
   lr: 0.001
 train:
-  epochs: 25
-  batch_size: 64
+  epochs: 50
+  batch_size: 32
 dataset:
   path: MNIST
   test_size: 0.2
@@ -13,3 +13,4 @@ dataset:
   num_workers: 2
 loss: custom
 image_size: 50
+log_wandb: False
