job cluster plotas n experiments

--- a/vphys.yml
+++ b/vphys.yml
@@ -1,5 +1,7 @@
-name: /Users/alejandro/Documents/Phd/Repositories/Own/Vphy/.conda
+name: vphys
 channels:
+  - pytorch
+  - defaults
   - conda-forge
   - defaults
 dependencies:
