--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-matplotlib==3.8.4
-numpy==1.26.4
-omegaconf==2.3.0
-opencv_python==4.9.0.80
-pandas==2.2.2
-Pillow==10.3.0
-scikit_learn==1.4.2
-torch==2.2.2
-torchvision==0.17.2
-tqdm==4.66.4
+matplotlib
+numpy
+omegaconf
+opencv
+pandas
+Pillow
+anaconda::scikit-learn
+pytorch::pytorch
+pytorch::torchvision
+pytorch::pytorch-cuda
+torchvision
+tqdm
+wandb
